# faceid

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
script/: bootstrap  cibuild  console  server  setup  test
