[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faceid"
description = "Provide a face recognition API for authenticating users based on facial images."
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    { name = "Matimu Chauke", email = "matimu@chauke.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = []

[project.optional-dependencies]
full = []

[tool.hatch.version]
path = "faceid/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/faceid",
]
